objects/JBCXM__ActionTemplates__c.object
<CustomObject>
    <description>The actions that need to be performed on rule evaluation to true.</description>
    <fields>
        <fullName>JBCXM__ActionCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Action Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__ActionIndex__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Action Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__ActionInfo__c</fullName>
        <label>Action Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Action_Type__c</fullName>
        <description>Action Type.</description>
        <inlineHelpText>Action Type</inlineHelpText>
        <label>Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__AutomatedAlertRules__c</fullName>
        <label>Automated Alert Rule</label>
        <referenceTo>JBCXM__AutomatedAlertRules__c</referenceTo>
        <relationshipLabel>Action Templates</relationshipLabel>
        <relationshipName>ActionTemplate</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__externalId__c</fullName>
        <externalId>true</externalId>
        <label>externalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Action Template</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RelatedId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>